# raft-well-architected

./: .gitignore  RAFT-Dataset-StepbyStep.ipynb  RAFT-Finetuning-Starling7b.ipynb  RAFT-Model-Comparison.ipynb  README.md  pyproject.toml  raft-step-by-step.ipynb
data/: documents.pkl  synthetic-triplets.pkl
model/: raft_starling7b_serve.py  save_chat_template.py  serve_model.py
src/: settings.py
