[tool.poetry]
name = "raft-well-architected"
version = "0.1.0"
description = ""
authors = ["jjovalle99 <jj.ovalle@uniandes.edu.co>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
langchain = "^0.1.13"
langserve = {extras = ["all"], version = "^0.0.51"}
langchain-openai = "^0.1.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
iprogress = "^0.4"


[tool.poetry.group.format.dependencies]
ruff = "^0.3.4"




[tool.poetry.group.raft.dependencies]
llama-index = "^0.10.24"
llama-parse = "^0.4.0"
langchain-experimental = "^0.0.55"
datasets = "^2.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
